# sc-rust-upgrade-nft

./: .devnet.env  .env.devnet.example  .env.mainnet.example  .gitignore  .mainnet.env  Cargo.toml  README.md  build.sh  deployments.json  exampleKostas.txt  sc-config.toml  test.txt  walletPemFile.txt
interaction/: allNfts.txt  decoded_unclaimed.txt  decoded_unclaimed_old.txt  fetcher.py  from_hex.py  globals.devnet.sh  globals.mainnet.sh  investors_level.py  retrieve.py  run.sh  snippets.sh  to_hex.py  view.sh
interaction/reports/: ESDTNFTTransfer@454d4f5259414e46542d303336663166@01@01@000000000000000005007746e68e60a2269f4a72c2ef4ffa307df41f75b9201b@696e697469616c697a65.report.json  ESDTNFTTransfer@454d4f5259414e46542d303336663166@01@01@000000000000000005007746e68e60a2269f4a72c2ef4ffa307df41f75b9201b@757067726164654e6674.report.json  ESDTNFTTransfer@454d4f5259414e46542d303336663166@02@01@000000000000000005007746e68e60a2269f4a72c2ef4ffa307df41f75b9201b@696e697469616c697a65.report.json  ESDTNFTTransfer@454d4f5259414e46542d303336663166@02@01@000000000000000005007746e68e60a2269f4a72c2ef4ffa307df41f75b9201b@757067726164654e6674.report.json  downgradeLevel.report.json  setSpecialRole.report.json  (+33 more)
meta/: Cargo.toml
output/: nftupgrade.abi.json  nftupgrade.imports.json  nftupgrade.mxsc.json  nftupgrade.wasm  nftupgrade_proxy.rs  proxy.rs  template.abi.json  template.imports.json  template.mxsc.json  template.wasm
src/: constants.rs  managedbufferutils.rs  nftupgrade.rs  owner.rs  private.rs  proxy.rs  storage.rs  template.rs  views.rs
wasm/: Cargo.toml
(+2 files in other folders)
