[package]
name = "nftupgrade"
version = "0.1.0"
authors = [ "Kostas Tzoumpas <tzoumpas.ks@gmail.com>"]
edition = "2021"
publish = false

[lib]
path = "src/nftupgrade.rs"

[dependencies.multiversx-sc]
version = "0.58.0"

[dependencies.multiversx-sc-modules]
version = "0.58.0"

[dev-dependencies.multiversx-sc-scenario]
version = "0.58.0"
